--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,34 +6,50 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="32dp"
-        android:layout_marginTop="10dp"
+        android:layout_height="48dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="TITLE"
-        android:id="@+id/title"
-        android:textAlignment="center"/>
+        android:id="@+id/titleBar"
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Menu"
+            android:layout_weight="2"
+            />
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="TITLE"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:id="@+id/title"/>
+
+
+    </LinearLayout>
 
     <FrameLayout
-        android:id="@+id/boardFrame"
+        android:id="@+id/mainFrameContainer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/menuBar"
+        app:layout_constraintBottom_toTopOf="@+id/actionBarFrame"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title" />
+        app:layout_constraintTop_toBottomOf="@+id/titleBar" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="32dp"
-        android:text="Menu Bar"
-        android:textAlignment="center"
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="80dp"
+        android:id="@+id/actionBarFrame"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:id="@+id/menuBar"/>
+        app:layout_constraintStart_toStartOf="parent"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
