renamed fragment_menu.java, fragment_settings.java, fragment_user_selection.java and fragment_user_customization.java to proper Java standards.

--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -5,7 +5,7 @@
     android:id="@+id/layout_menu"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment_menu">
+    tools:context=".FragmentMenu">
 
     <!-- Setting layout to contain the buttons required on the main menu. -->
 
