--- a/app/src/main/res/layout/fragment_user_selection.xml
+++ b/app/src/main/res/layout/fragment_user_selection.xml
@@ -76,7 +76,7 @@
         <FrameLayout
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@drawable/profile_select"
+            android:background="@drawable/profile_standby"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -86,7 +86,7 @@
                 android:id="@+id/profile1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/profile_select"
+                android:background="@drawable/profile_standby"
                 android:padding="30dp"
                 android:scaleType="fitCenter"
                 android:src="@drawable/basic_profile_pic" />
@@ -95,7 +95,8 @@
                 android:id="@+id/profile1_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
+                android:layout_gravity="left"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:text=""
                 android:textColor="@color/black"
@@ -120,7 +121,7 @@
         <FrameLayout
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@drawable/profile_select"
+            android:background="@drawable/profile_standby"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/profilesGuideline2"
             app:layout_constraintEnd_toEndOf="parent  "
@@ -130,7 +131,7 @@
                 android:id="@+id/profile2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/profile_select"
+                android:background="@drawable/profile_standby"
                 android:padding="30dp"
                 android:src="@drawable/basic_profile_pic"
                 android:scaleType="fitCenter" />
@@ -139,7 +140,8 @@
                 android:id="@+id/profile2_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
+                android:layout_gravity="left"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:text=""
                 android:textColor="@color/black"
