--- a/app/src/main/res/layout/fragment_user_customization_landscape.xml
+++ b/app/src/main/res/layout/fragment_user_customization_landscape.xml
@@ -99,7 +99,7 @@
                 android:id="@+id/profile1Image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/profile_select"
+                android:background="@drawable/profile_standby"
                 android:padding="10dp"
                 android:src="@drawable/basic_profile_pic"
                 android:scaleType="fitCenter" />
@@ -120,7 +120,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/baseball"
-                android:background="@drawable/profile_select"
+                android:background="@drawable/profile_standby"
                 android:padding="10dp"
                 android:scaleType="fitCenter" />
 
@@ -140,7 +140,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/basketball"
-                android:background="@drawable/profile_select"
+                android:background="@drawable/profile_standby"
                 android:padding="10dp"
                 android:scaleType="fitCenter" />
 
@@ -160,7 +160,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/bowlingball"
-                android:background="@drawable/profile_select"
+                android:background="@drawable/profile_standby"
                 android:padding="10dp"
                 android:scaleType="fitCenter"  />
 
@@ -180,7 +180,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/eightball"
-                android:background="@drawable/profile_select"
+                android:background="@drawable/profile_standby"
                 android:padding="10dp"
                 android:scaleType="fitCenter" />
 
@@ -200,7 +200,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/charpic1"
-                android:background="@drawable/profile_select"
+                android:background="@drawable/profile_standby"
                 android:padding="10dp"
                 android:scaleType="fitCenter" />
 
@@ -220,7 +220,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/soccerball"
-                android:background="@drawable/profile_select"
+                android:background="@drawable/profile_standby"
                 android:padding="10dp"
                 android:scaleType="fitCenter"  />
 
@@ -240,7 +240,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/volleyball"
-                android:background="@drawable/profile_select"
+                android:background="@drawable/profile_standby"
                 android:padding="10dp"
                 android:scaleType="fitCenter" />
 
@@ -260,7 +260,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/tennisball"
-                android:background="@drawable/profile_select"
+                android:background="@drawable/profile_standby"
                 android:padding="10dp"
                 android:scaleType="fitCenter" />
 
