--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -33,11 +33,12 @@
 
     <TableLayout
         android:id="@+id/tableLayout"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_width="0dp"
+        app:layout_constraintDimensionRatio="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/playerNames"
+        app:layout_constraintTop_toBottomOf="@id/playerNames"
         app:layout_constraintBottom_toTopOf="@+id/buttonLayout">
 
     </TableLayout>
@@ -47,9 +48,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/buttonLayout"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
+        app:layout_constraintBottom_toTopOf="@+id/actionBar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        style="?android:attr/buttonBarStyle">
 
         <Button
             android:layout_width="wrap_content"
@@ -61,7 +63,8 @@
             android:layout_marginTop="10dp"
             android:text="Undo"
             android:id="@+id/undoButton"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            style="?android:attr/buttonBarButtonStyle" />
 
         <Button
             android:layout_width="wrap_content"
@@ -73,16 +76,17 @@
             android:layout_marginTop="10dp"
             android:text="Reset"
             android:id="@+id/resetButton"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            style="?android:attr/buttonBarButtonStyle" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/buttonLayout"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        android:id="@+id/actionBar">
 
         <LinearLayout
             android:layout_width="0dp"
