Several issues fixed
Issues fixed:
- Menu button removed when menu. fragment is loaded
- Back button is removed from user selection fragment
- MainActivity on create no longer loads menu (when changing orienation). On app launch, initial currentFlag = -1. Only load menu onCreate when currentFlag = -1

Known bugs:
- User customization fragment causes crash
- Both players win if vs AI
- App crash if draw vs AI
- Timer doesn't automatically start
- Timer drawable doesn't change when pressed
- Timer paused doesn't disable player moves
- Menu button in game swaps fragment before alert gives player the option
- Scoreboard needs to sort by wins

--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -51,8 +51,20 @@
             android:layout_height="0dp"
             android:layout_gravity="center"
             android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:background="@drawable/square_button"
             android:text="@string/fragment_menu_scores"
+            android:textSize="30sp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/settingsButton"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_height="0dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/square_button"
+            android:text="SETTINGS"
             android:textSize="30sp" />
 
     </LinearLayout>
