--- a/app/src/main/res/layout/fragment_menu_landscape.xml
+++ b/app/src/main/res/layout/fragment_menu_landscape.xml
@@ -54,6 +54,17 @@
             android:text="@string/fragment_menu_scores"
             android:textSize="30sp" />
 
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/settingsButton"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@drawable/square_button"
+            android:text="SETTINGS"
+            android:textSize="30sp" />
+
 
 
     </LinearLayout>
