--- a/app/src/main/res/layout/fragment_user_customization.xml
+++ b/app/src/main/res/layout/fragment_user_customization.xml
@@ -24,7 +24,7 @@
     <!-- *********************************************** -->
 
     <!-- Section 1 - Title -->
-    <EditText
+    <TextView
         android:id="@+id/profileName"
         android:layout_width="match_parent"
         android:layout_height="0dp"
