--- a/app/src/main/res/layout/fragment_user_selection.xml
+++ b/app/src/main/res/layout/fragment_user_selection.xml
@@ -93,15 +93,15 @@
 
             <EditText
                 android:id="@+id/profile1_name"
-                android:layout_width="wrap_content"
+                android:layout_width="130dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:clickable="false"
                 android:text=""
                 android:textColor="@color/black"
-                android:textStyle="bold"
-                android:clickable="false"/>
+                android:textStyle="bold" />
 
         </FrameLayout>
 
@@ -138,15 +138,15 @@
 
             <EditText
                 android:id="@+id/profile2_name"
-                android:layout_width="wrap_content"
+                android:layout_width="130dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:clickable="false"
                 android:text=""
                 android:textColor="@color/black"
-                android:textStyle="bold"
-                android:clickable="false" />
+                android:textStyle="bold" />
 
         </FrameLayout>
 
