Fixed many bugs
Issues fixed
- Added Toast 'saved' when player pressed save button in user customization
- Changed Menu button appearance
- Settings no longer crashes (caused by button type casting)
- Settings win conditions and board size buttons now only highlight the current setting on fragment creation, instead of all buttons until pressed
- Settings landscape now shows button
- Win logic now recognises some win conditions
- Added avatars to scoreboard

Current issues
- Changing orientation during player select removes previous changes
- Pressing edit with player1 name filled but player2 empty will toast 'player must have name' then wipe all previous changes
- Only entering player name doesn't use player in player selection fragment

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,11 +14,12 @@
         android:id="@+id/titleBar"
         android:orientation="horizontal">
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/menuButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Menu"
-            android:id="@+id/menuButton"
+            android:background="@drawable/square_button"
             android:layout_weight="1"
             />
 
