--- a/app/src/main/res/layout/fragment_user_selection_landscape.xml
+++ b/app/src/main/res/layout/fragment_user_selection_landscape.xml
@@ -90,7 +90,7 @@
                 android:src="@drawable/basic_profile_pic"
                 android:scaleType="fitCenter" />
 
-            <TextView
+            <EditText
                 android:id="@+id/profile1_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -135,7 +135,7 @@
                 android:src="@drawable/basic_profile_pic"
                 android:scaleType="fitCenter" />
 
-            <TextView
+            <EditText
                 android:id="@+id/profile2_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
