--- a/app/src/main/res/layout/player_list_item_layout.xml
+++ b/app/src/main/res/layout/player_list_item_layout.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:id="@+id/playerAvatar"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_weight="1"/>
     <TextView
         android:id="@+id/playerName"
