--- a/app/src/main/res/layout/fragment_user_customization.xml
+++ b/app/src/main/res/layout/fragment_user_customization.xml
@@ -76,7 +76,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_begin="129dp" />
+            app:layout_constraintGuide_percent=".33" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/profile_guideline4"
