--- a/app/src/main/res/layout-land/fragment_user_selection.xml
+++ b/app/src/main/res/layout-land/fragment_user_selection.xml
@@ -177,9 +177,9 @@
             android:text="@string/play"
             android:background="@drawable/square_button"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="@id/actionBar_guideline1"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="@id/actionBar_guideline2" />
+            app:layout_constraintBottom_toBottomOf="parent" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/edit_button"
@@ -191,8 +191,8 @@
             android:background="@drawable/square_button"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/actionBar_guideline1"
-            app:layout_constraintBottom_toBottomOf="@id/actionBar_guideline2" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
     </LinearLayout>
 
