--- a/app/src/main/res/layout/fragment_menu_landscape.xml
+++ b/app/src/main/res/layout/fragment_menu_landscape.xml
@@ -60,7 +60,9 @@
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_margin="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="5dp"
             android:background="@drawable/square_button"
             android:text="SETTINGS"
             android:textSize="30sp" />
