Update to include recyclerView to userCustomization to select icons from list. Update layouts to have working portrait and landscape layouts, add checks to ensure both users cant select same icon.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="button_blue">#63C5DA</color>
     <color name="paled_blue">#757C88</color>
     <color name="label_orange">#FECC91</color>
+    <color name="selector_shader_green">#33C1E1C1</color>
 </resources>
