--- a/app/src/main/res/layout-land/fragment_settings.xml
+++ b/app/src/main/res/layout-land/fragment_settings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout_settings_landscape"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -19,14 +18,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent=".33" />
+        app:layout_constraintGuide_percent=".5" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent=".66" />
+        app:layout_constraintGuide_percent="1" />
 
     <!-- *********************************************** -->
 
@@ -173,105 +172,6 @@
             android:background="@drawable/square_button"
             android:text="@string/fragment_settings_wincondition_3"
             android:textSize="30sp" />
-
-    </LinearLayout>
-
-    <!-- Section 3 - Character Selection -->
-    <LinearLayout
-        android:id="@+id/ll_section_three_title"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="5dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="@id/guideline3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/guideline1"
-        >
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:background="@drawable/title_label"
-            android:text="@string/fragment_settings_section_three_title" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ll_section_three_avatars"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="5dp"
-        android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="@id/guideline1"
-        app:layout_constraintStart_toStartOf="@id/guideline3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-        <TextView
-            android:id="@+id/p1_label"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:layout_margin="5dp"
-            android:background="@drawable/coloured_label"
-            android:text="@string/fragment_settings_character_selection_p1"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            />
-
-        <TextView
-            android:id="@+id/p1_logo"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
-            android:background="@drawable/coloured_logo_x"
-            android:gravity="center"
-            android:text="@string/fragment_settings_character_selection_X"
-            android:textSize="25sp"
-            android:textStyle="bold" />
-
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/swap_button"
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:layout_height="0dp"
-            android:layout_gravity="center"
-            android:layout_margin="5dp"
-            android:background="@color/white"
-            android:src="@drawable/swap"
-            android:scaleType="fitCenter"
-            android:textSize="30dp" />
-
-        <TextView
-            android:id="@+id/p2_label"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:layout_margin="5dp"
-            android:background="@drawable/coloured_label"
-            android:text="@string/fragment_settings_character_selection_p2"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            />
-
-        <TextView
-            android:id="@+id/p2_logo"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
-            android:background="@drawable/coloured_logo_o"
-            android:gravity="center"
-            android:text="@string/fragment_settings_character_selection_O"
-            android:textSize="25sp"
-            android:textStyle="bold" />
 
     </LinearLayout>
 
