--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -13,14 +13,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent=".30" />
+        app:layout_constraintGuide_percent=".50" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent=".60" />
+        app:layout_constraintGuide_percent="1" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
@@ -182,118 +182,5 @@
             android:textSize="30sp" />
 
     </LinearLayout>
-
-    <!-- Section 3 - Character Selection -->
-    <LinearLayout
-        android:id="@+id/ll_section_three_title"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="5dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toTopOf="@id/guideline2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/guideline3"
-        >
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:textSize="40sp"
-            android:textStyle="bold"
-            android:background="@drawable/title_label"
-            android:text="@string/fragment_settings_section_three_title" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ll_section_three_avatars"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="5dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toTopOf="@id/guideline3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/guideline4">
-
-       <TextView
-           android:id="@+id/p1_label"
-           android:layout_width="0dp"
-           android:layout_height="match_parent"
-           android:layout_weight="1"
-           android:gravity="center"
-           android:layout_margin="10dp"
-           android:background="@drawable/coloured_label"
-           android:text="@string/fragment_settings_character_selection_p1"
-           android:textSize="30sp"
-           android:textStyle="bold"
-           />
-
-        <TextView
-            android:id="@+id/p2_label"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:layout_margin="10dp"
-            android:background="@drawable/coloured_label"
-            android:text="@string/fragment_settings_character_selection_p2"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ll_section_three_icons"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="5dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toTopOf="@id/guideline4"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-        <TextView
-            android:id="@+id/p1_logo"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
-            android:background="@drawable/coloured_logo_x"
-            android:gravity="center"
-            android:text="@string/fragment_settings_character_selection_X"
-            android:textSize="30sp"
-            android:textStyle="bold" />
-
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/swap_button"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_margin="5dp"
-            android:background="@color/white"
-            android:src="@drawable/swap"
-            android:scaleType="fitCenter"
-            android:textSize="30sp" />
-
-        <TextView
-            android:id="@+id/p2_logo"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
-            android:background="@drawable/coloured_logo_o"
-            android:gravity="center"
-            android:text="@string/fragment_settings_character_selection_O"
-            android:textSize="30sp"
-            android:textStyle="bold" />
-
-    </LinearLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
