--- a/app/src/main/res/layout/fragment_user_customization.xml
+++ b/app/src/main/res/layout/fragment_user_customization.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/layout_user_customization">
@@ -273,21 +272,49 @@
     <!-- ********************************************************************************** -->
 
     <!-- Section 3 - Action Bar -->
-
-
-    <!-- Buttons. -->
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/save_button"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_margin="5dp"
-        android:text="@string/fragment_user_customization_save"
-        android:background="@drawable/square_button"
+
         app:layout_constraintTop_toBottomOf="@+id/profiles_area"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+
+        android:orientation="vertical"
+        android:id="@+id/actionBar">
+
+        <!-- Icon Selection -->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="In-Game Icon"
+            android:textAlignment="center"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:id="@+id/iconRecyclerView"/>
+
+        <!-- Buttons. -->
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/save_button"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            android:text="@string/fragment_user_customization_save"
+            android:background="@drawable/square_button"
+            app:layout_constraintTop_toBottomOf="@+id/profiles_area"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+    </LinearLayout>
+
+
+
 
 
     <!-- ******************************************************************** -->
