--- a/app/src/main/res/layout-land/fragment_user_customization.xml
+++ b/app/src/main/res/layout-land/fragment_user_customization.xml
@@ -24,7 +24,7 @@
     <!-- *********************************************** -->
 
     <!-- Section 1 - Title -->
-    <TextView
+    <EditText
         android:id="@+id/profileName"
         android:layout_width="0dp"
         android:layout_height="0dp"
