--- a/app/src/main/res/layout-land/fragment_user_selection.xml
+++ b/app/src/main/res/layout-land/fragment_user_selection.xml
@@ -90,7 +90,7 @@
                 android:src="@drawable/basic_profile_pic"
                 android:scaleType="fitCenter" />
 
-            <EditText
+            <TextView
                 android:id="@+id/profile1_name"
                 android:layout_width="130dp"
                 android:layout_height="wrap_content"
@@ -136,7 +136,7 @@
                 android:src="@drawable/basic_profile_pic"
                 android:scaleType="fitCenter" />
 
-            <EditText
+            <TextView
                 android:id="@+id/profile2_name"
                 android:layout_width="130dp"
                 android:layout_height="wrap_content"
